Adds category name to download button.

--- a/templates/books/view_chapter.html
+++ b/templates/books/view_chapter.html
@@ -22,7 +22,8 @@
                     <h3><em>{% for contributor in chapter.contributors.all %}{% if not forloop.first and not forloop.last %},
             {% elif forloop.last and not forloop.first %} & {% endif %}{{ contributor }}{% endfor %}</em></h3>
                     <p>This {% if book.category %}{{ book.category.chapter_name }}{% else %}chapter{% endif %} is part of: {{ book.citation|safe }}</p>
-                    <a href="{% url 'books_download_chapter' book.pk chapter.pk %}" class="button"><i class="fa fa-download">&nbsp;</i> Download Chapter</a>
+                    <a href="{% url 'books_download_chapter' book.pk chapter.pk %}" class="button"><i class="fa fa-download">&nbsp;</i> Download
+                        {% if book.category %}{{ book.category.chapter_name }}{% else %}Chapter{% endif %}</a>
                     <table class="table" style="margin-bottom: 0;">
                         <tr>
                             <th>Description</th>
