--- a/templates/books/book_detail.html
+++ b/templates/books/book_detail.html
@@ -7,7 +7,7 @@
 
             {% if not books %}<p><br /><a class="button" href="{% url 'books_index' %}"><i class="fa fa-arrow-left">&nbsp;</i>Back to Listing</a></p>{% endif %}
         </div>
-        <div class="{% if books %}large-9 columns{% else %}large-7 columns{% endif %}{% if not books and not book.format_set.all %} end{% endif %}">
+        <div class="{% if books %}large-9 columns{% else %}large-7 columns{% endif %}{% if not books and not book.format_set.exists %} end{% endif %}">
             {% if book.is_open_access %}
                 {% include "books/oa_header.html" %}
             {% else %}
@@ -63,7 +63,7 @@
 
         </div>
 
-        {% if not books and book.format_set.all %}
+        {% if not books and book.format_set.exists %}
             <div class="large-2 columns">
                 <h3>Book Metrics</h3>
                 <h4>{{ book.metrics.downloads }}</h4>
