--- a/templates/books/elements/detail.html
+++ b/templates/books/elements/detail.html
@@ -6,18 +6,22 @@
                 <tr>
                     <th>Published</th>
                     <th>Published By</th>
+                  {% if book.pages %}
                     <th>Pages</th>
-                    {% if book.isbn %}
-                        <th>ISBN</th>{% endif %}
-                    {% if book.doi %}
-                        <th>DOI</th>{% endif %}
-                    {% if chapters %}
-                        <th>{% if book.category %}{{ book.category.chapter_name_plural|capfirst }}{% else %}Chapters{% endif %}</th>{% endif %}
+                  {% endif %}
+                  {% if book.isbn %}
+                    <th>ISBN</th>{% endif %}
+                  {% if book.doi %}
+                    <th>DOI</th>{% endif %}
+                  {% if chapters %}
+                    <th>{% if book.category %}{{ book.category.chapter_name_plural|capfirst }}{% else %}Chapters{% endif %}</th>{% endif %}
                 </tr>
                 <tr>
                     <td>{{ book.date_published }}</td>
                     <td>{{ book.publisher_name }}</td>
+                    {% if book.pages %}
                     <td>{{ book.pages }}</td>
+                    {% endif %}
                     {% if book.isbn %}
                         <td>{{ book.isbn }}</td>{% endif %}
                     {% if book.doi %}
@@ -55,6 +59,22 @@
                     </li>
                 {% endfor %}
             </ul>
+            </p>
+        </div>
+    </li>
+    {% endif %}
+
+    {% if book.publisher_notes.exists %}
+    <li class="accordion-item" data-accordion-item>
+        <a href="#" class="accordion-title">Publisher Notes</a>
+        <div class="accordion-content" data-tab-content>
+            <p>
+                {{ book.full_title }} has the following notes
+              <ul>
+                {% for note in book.publisher_notes.all %}
+                    <li> {{ note.note |safe }} </li>
+                {% endfor %}
+              </ul>
             </p>
         </div>
     </li>
