Added support for material books

--- a/templates/books/material/book.html
+++ b/templates/books/material/book.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="box journal">
                 <div class="row">
-                    {% include "books/book_detail.html" with book=book %}
+                    {% include "books/material/book_detail.html" with book=book %}
                 </div>
             </div>
         </div>
