--- a/templates/books/olh/book_detail.html
+++ b/templates/books/olh/book_detail.html
@@ -57,7 +57,7 @@
 
             {% with chapters=book.chapter_set.all %}
                 {% if not books %}
-                    {% include "books/elements/detail.html" %}
+                    {% include "books/olh/detail.html" %}
                 {% endif %}
             {% endwith %}
 
