--- a/templates/books/olh/index.html
+++ b/templates/books/olh/index.html
@@ -17,7 +17,7 @@
 
             {% for book in books %}
                 <div class="box journal">
-                        {% include "books/book_detail.html" with book=book %}
+                        {% include "books/olh/book_detail.html" with book=book %}
                     </div>
                 <hr />
             {% empty %}
