--- a/templates/books/book_detail.html
+++ b/templates/books/book_detail.html
@@ -1,4 +1,4 @@
-{% load static from staticfiles %}
+{% load static %}
 {% load i18n %}
 <div class="large-12 columns">
     <div class="content clearfix">
