Use OLH rather than olh for template paths.

--- a/templates/books/olh/book.html
+++ b/templates/books/olh/book.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="box journal">
                 <div class="row">
-                    {% include "books/olh/book_detail.html" with book=book %}
+                    {% include "books/OLH/book_detail.html" with book=book %}
                 </div>
             </div>
         </div>
