--- a/templates/books/admin.html
+++ b/templates/books/admin.html
@@ -24,7 +24,7 @@
                 <tr>
                     <th>ID</th>
                     <th>Title</th>
-                    <th>Subtile</th>
+                    <th>Subtitle</th>
                     <th>First Author</th>
                     <th>ISBN</th>
                     <th>DOI</th>
