--- a/templates/books/metrics.html
+++ b/templates/books/metrics.html
@@ -35,7 +35,7 @@
                 <tr>
                     <th>ID</th>
                     <th>Title</th>
-                    <th>Subtile</th>
+                    <th>Subtitle</th>
                     <th>First Author</th>
                     <th>Date Published</th>
                     <th>Reads</th>
